Add Restart=on-failure to services

--- a/gitlab-sidekiq.service
+++ b/gitlab-sidekiq.service
@@ -23,6 +23,8 @@ ProtectHome=true
 #NoNewPrivileges=true
 ExecStart=/usr/bin/bundle-2.1 exec sidekiq -q post_receive -q mailers -q system_hook -q incoming_email -q project_web_hook -q gitlab_shell -q common -q default -q archive_repo -e production
 ExecStop=/usr/bin/bundle-2.1 exec sidekiqctl stop /run/gitlab/sidekiq.pid
+Restart=on-failure
+RestartSec=1
 
 [Install]
 WantedBy=multi-user.target
