--- a/gitlab-mailroom.service
+++ b/gitlab-mailroom.service
@@ -13,6 +13,8 @@ SyslogIdentifier=gitlab-mailroom
 PIDFile=/run/gitlab/mailroom.pid
 ExecStart=/usr/bin/bundle-2.1 exec mail_room -q -c <DATADIR>/config/mail_room.yml
 ExecStop=/usr/bin/kill -QUIT $MAINPID
+Restart=on-failure
+RestartSec=1
 
 [Install]
 WantedBy=multi-user.target
