--- a/gitlab-unicorn.service
+++ b/gitlab-unicorn.service
@@ -22,6 +22,8 @@ NoNewPrivileges=true
 ExecStart=/usr/bin/bundle-2.1 exec unicorn_rails -c <DATADIR>/config/unicorn.rb -E production
 ExecStop=/usr/bin/kill -QUIT $MAINPID
 ExecReload=/usr/bin/kill -USR2 $MAINPID
+Restart=on-failure
+RestartSec=1
 
 [Install]
 WantedBy=multi-user.target
