--- a/gitlab-backup.service
+++ b/gitlab-backup.service
@@ -9,11 +9,11 @@ User=gitlab
 Group=gitlab
 SyslogIdentifier=gitlab-backup
 WorkingDirectory=<DATADIR>
-Environment=RAILS_ENV=production PATH=/opt/ruby2.1/bin:/usr/bin
+Environment=RAILS_ENV=production PATH=/opt/ruby/bin:/usr/bin
 CapabilityBoundingSet=
 PrivateTmp=true
 PrivateDevices=true
 ProtectSystem=full
 ProtectHome=true
 NoNewPrivileges=true
-ExecStart=/usr/bin/bundle-2.1 exec rake gitlab:backup:create
+ExecStart=/usr/bin/bundle exec rake gitlab:backup:create
