--- a/gitlab-unicorn.service
+++ b/gitlab-unicorn.service
@@ -8,7 +8,7 @@ After=redis.service mysqld.service postgresql.service network.target
 User=gitlab
 Group=gitlab
 WorkingDirectory=<DATADIR>
-Environment=RAILS_ENV=production PATH=/opt/ruby2.1/bin:/usr/bin
+Environment=RAILS_ENV=production PATH=/opt/ruby/bin:/usr/bin
 SyslogIdentifier=gitlab-unicorn
 PIDFile=/run/gitlab/unicorn.pid
 RuntimeDirectory=gitlab
@@ -19,7 +19,7 @@ PrivateDevices=true
 ProtectSystem=full
 ProtectHome=true
 NoNewPrivileges=true
-ExecStart=/usr/bin/bundle-2.1 exec unicorn_rails -c <DATADIR>/config/unicorn.rb -E production
+ExecStart=/usr/bin/bundle exec unicorn_rails -c <DATADIR>/config/unicorn.rb -E production
 ExecStop=/usr/bin/kill -QUIT $MAINPID
 ExecReload=/usr/bin/kill -USR2 $MAINPID
 Restart=on-failure
