--- a/gitlab-mailroom.service
+++ b/gitlab-mailroom.service
@@ -8,10 +8,10 @@ After=gitlab-unicorn.service
 User=gitlab
 Group=gitlab
 WorkingDirectory=<DATADIR>
-Environment=RAILS_ENV=production PATH=/opt/ruby2.1/bin:/usr/bin
+Environment=RAILS_ENV=production PATH=/opt/ruby/bin:/usr/bin
 SyslogIdentifier=gitlab-mailroom
 PIDFile=/run/gitlab/mailroom.pid
-ExecStart=/usr/bin/bundle-2.1 exec mail_room -q -c <DATADIR>/config/mail_room.yml
+ExecStart=/usr/bin/bundle exec mail_room -q -c <DATADIR>/config/mail_room.yml
 ExecStop=/usr/bin/kill -QUIT $MAINPID
 Restart=on-failure
 RestartSec=1
