--- a/gitlab-sidekiq.service
+++ b/gitlab-sidekiq.service
@@ -9,7 +9,7 @@ JoinsNamespaceOf=gitlab-unicorn.service
 User=gitlab
 Group=gitlab
 WorkingDirectory=<DATADIR>
-Environment=RAILS_ENV=production PATH=/opt/ruby2.1/bin:/usr/bin
+Environment=RAILS_ENV=production PATH=/opt/ruby/bin:/usr/bin
 SyslogIdentifier=gitlab-sidekiq
 PIDFile=/run/gitlab/sidekiq.pid
 CapabilityBoundingSet=
@@ -21,8 +21,8 @@ ProtectHome=true
 # use postfix' sendmail wrapper. If you use an SMTP server
 # instead you can safely enable this security feature.
 #NoNewPrivileges=true
-ExecStart=/usr/bin/bundle-2.1 exec sidekiq -q post_receive -q mailers -q system_hook -q incoming_email -q project_web_hook -q gitlab_shell -q common -q default -q archive_repo -e production
-ExecStop=/usr/bin/bundle-2.1 exec sidekiqctl stop /run/gitlab/sidekiq.pid
+ExecStart=/usr/bin/bundle exec sidekiq -q post_receive -q mailers -q system_hook -q incoming_email -q project_web_hook -q gitlab_shell -q common -q default -q archive_repo -e production
+ExecStop=/usr/bin/bundle exec sidekiqctl stop /run/gitlab/sidekiq.pid
 Restart=on-failure
 RestartSec=1
 
