--- a/gitlab-sidekiq.service
+++ b/gitlab-sidekiq.service
@@ -21,7 +21,7 @@ ProtectHome=true
 # use postfix' sendmail wrapper. If you use an SMTP server
 # instead you can safely enable this security feature.
 #NoNewPrivileges=true
-ExecStart=/usr/bin/bundle exec sidekiq -q post_receive -q mailers -q system_hook -q incoming_email -q project_web_hook -q gitlab_shell -q common -q default -q archive_repo -e production
+ExecStart=/usr/bin/bundle exec sidekiq -C <DATADIR>/config/sidekiq_queues.yml -e production
 ExecStop=/usr/bin/bundle exec sidekiqctl stop /run/gitlab/sidekiq.pid
 Restart=on-failure
 RestartSec=1
