Remove mysql-specific code
https://about.gitlab.com/blog/2019/06/27/removing-mysql-support/

--- a/gitlab-puma.service
+++ b/gitlab-puma.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=GitLab Puma Server
 Requires=redis.service
-Wants=mysqld.service postgresql.service
-After=redis.service mysqld.service postgresql.service network.target
+Wants=postgresql.service
+After=redis.service postgresql.service network.target
 StartLimitIntervalSec=100s
 
 [Service]
