Rename variable to match its functionality
DATADIR -> APPDIR /usr/share/webapps/gitlab this is the location where the immutable application code located
HOMEDIR -> DATADIR /var/lib/gitlab location for mutable application data

--- a/gitlab-backup.service
+++ b/gitlab-backup.service
@@ -8,7 +8,7 @@ Type=oneshot
 User=gitlab
 Group=gitlab
 SyslogIdentifier=gitlab-backup
-WorkingDirectory=<DATADIR>
+WorkingDirectory=<APPDIR>
 # Prevent ExecJS from complaining that Node is not installed in production
 Environment=RAILS_ENV=production EXECJS_RUNTIME=Disabled
 CapabilityBoundingSet=
