Move account's default environment variables to a file
All systemd services and command-line instructions require following envvars to
be set: RAILS_ENV and EXECJS_RUNTIME. To avoid repeating ourselves in multiple
places we moved these envvars to /usr/share/webapps/gitlab/environment.
Use this environment file from all the systemd service units and in
command-line instructions.

Add RUBYOPT='-W:no-deprecated' envvar that is used to silence annoying ruby 2.7
deprecation warnings. Initially the hope was that Gitlab developers move to 2.7
or at least fix the new warnings quickly. But 6 months since Ruby 2.7 release and
not much progress has been done here. Let's disable the warnings for now.

--- a/gitlab-backup.service
+++ b/gitlab-backup.service
@@ -9,8 +9,7 @@ User=gitlab
 Group=gitlab
 SyslogIdentifier=gitlab-backup
 WorkingDirectory=<APPDIR>
-# Prevent ExecJS from complaining that Node is not installed in production
-Environment=RAILS_ENV=production EXECJS_RUNTIME=Disabled
+EnvironmentFile=<APPDIR>/environment
 CapabilityBoundingSet=
 PrivateTmp=true
 PrivateDevices=true
