--- a/gitlab-backup.service
+++ b/gitlab-backup.service
@@ -5,8 +5,8 @@ After=network.target
 
 [Service]
 Type=oneshot
-User=gitlab
-Group=gitlab
+User=git
+Group=git
 SyslogIdentifier=gitlab-backup
 WorkingDirectory=<APPDIR>
 EnvironmentFile=<APPDIR>/environment
@@ -16,4 +16,4 @@ PrivateDevices=true
 ProtectSystem=full
 ProtectHome=true
 NoNewPrivileges=true
-ExecStart=/usr/bin/bundle-2.7 exec rake gitlab:backup:create
+ExecStart=/usr/bin/bundle exec rake gitlab:backup:create
