--- a/gitlab-puma.service
+++ b/gitlab-puma.service
@@ -6,8 +6,8 @@ After=redis.service postgresql.service network.target
 StartLimitIntervalSec=100s
 
 [Service]
-User=gitlab
-Group=gitlab
+User=git
+Group=git
 WorkingDirectory=<APPDIR>
 EnvironmentFile=<APPDIR>/environment
 SyslogIdentifier=gitlab-puma
@@ -24,7 +24,7 @@ ProtectHome=true
 # instead you can safely enable these security features.
 #NoNewPrivileges=true
 #CapabilityBoundingSet=
-ExecStart=/usr/bin/bundle-2.7 exec puma -C <APPDIR>/config/puma.rb -e production
+ExecStart=/usr/bin/bundle exec puma -C <APPDIR>/config/puma.rb -e production
 ExecStop=/usr/bin/kill -QUIT $MAINPID
 ExecReload=/usr/bin/kill -USR2 $MAINPID
 Restart=on-failure
