--- a/gitlab-sidekiq.service
+++ b/gitlab-sidekiq.service
@@ -7,8 +7,8 @@ JoinsNamespaceOf=gitlab-puma.service
 StartLimitIntervalSec=100s
 
 [Service]
-User=gitlab
-Group=gitlab
+User=git
+Group=git
 WorkingDirectory=<APPDIR>
 EnvironmentFile=<APPDIR>/environment
 SyslogIdentifier=gitlab-sidekiq
@@ -21,8 +21,8 @@ ProtectHome=true
 # instead you can safely enable these security features.
 #NoNewPrivileges=true
 #CapabilityBoundingSet=
-ExecStart=/usr/bin/bundle-2.7 exec sidekiq -C <APPDIR>/config/sidekiq_queues.yml -e production
-ExecStop=/usr/bin/bundle-2.7 exec sidekiqctl stop /run/gitlab/sidekiq.pid
+ExecStart=/usr/bin/bundle exec sidekiq -C <APPDIR>/config/sidekiq_queues.yml -e production
+ExecStop=/usr/bin/bundle exec sidekiqctl stop /run/gitlab/sidekiq.pid
 Restart=on-failure
 RestartSec=1
 
